--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,15 +667,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# see which hereos won the most\n",
+    "sum_wins = pd.DataFrame(dummies_df.sum(), columns=[\"Won\"])\n",
+    "sum_wins.sort_values(by=['Won'], ascending=False, inplace=True)\n",
+    "\n",
+    "sum_wins = sum_wins[['Won']].apply(lambda x: x / 15000 * 100)\n",
+    "sum_wins.reset_index(inplace=True)\n",
+    "sum_wins.rename(columns={'index':'Hero'}, inplace=True)\n",
+    "top10_winners = sum_wins.head(10)\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(12,8))\n",
+    "sns.catplot(kind='bar', data=top10_winners, x='Hero', y='Won')\n",
+    "plt.title('Heroes Win Rates')\n",
+    "plt.ylabel('Win (%)')\n",
+    "plt.xticks(rotation=45, ha='right')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# characters with the all-time highest win rate (accurate to the 16th of September 2019)\n",
+    "# characters with the all-time highest in the dataset (accurate to the 16th of September 2019)\n",
     "top_winrate = np.array(['Omniknight', 'Abaddon', 'Warlock', 'Zeus', 'Spectre', 'Necrophos'])\n",
     "\n",
     "# create new feature: how many from the characters from the top win rate\n",
-    "top_wins_df = features_df.where(~features_df.isin(top_winrate), None)\n",
+    "top_wins_df = features_df.where(~features_df.isin(top10_winners), None)\n",
     "top_wins_df = pd.DataFrame(top_wins_df.isnull().sum(axis=1), columns=['Highest_Win_Rate'])\n",
     "# top_wins_df.head()"
    ]
@@ -714,35 +737,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "cannot concatenate object of type \"<class 'numpy.ndarray'>\"; only pd.Series, pd.DataFrame, and pd.Panel (deprecated) objs are valid",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-24-75e9bb9646da>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m                          \u001b[0mop_tiers12_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mop_tiers3_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcarry_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msupport_df\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m                          \u001b[0mofflane_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmid_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mroam_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnuke_disable_df\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m                          top_wins_df, picked_719, picked_720_df, lineups['Won']], axis=1)\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m export_csv = cleaned_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', \n",
-      "\u001b[1;32mc:\\users\\gilor\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages\\pandas\\core\\reshape\\concat.py\u001b[0m in \u001b[0;36mconcat\u001b[1;34m(objs, axis, join, join_axes, ignore_index, keys, levels, names, verify_integrity, sort, copy)\u001b[0m\n\u001b[0;32m    226\u001b[0m                        \u001b[0mkeys\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevels\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlevels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnames\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnames\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    227\u001b[0m                        \u001b[0mverify_integrity\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mverify_integrity\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 228\u001b[1;33m                        copy=copy, sort=sort)\n\u001b[0m\u001b[0;32m    229\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mop\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_result\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    230\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\gilor\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages\\pandas\\core\\reshape\\concat.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, objs, axis, join, join_axes, keys, levels, names, ignore_index, verify_integrity, copy, sort)\u001b[0m\n\u001b[0;32m    287\u001b[0m                        \u001b[1;34m' only pd.Series, pd.DataFrame, and pd.Panel'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    288\u001b[0m                        ' (deprecated) objs are valid'.format(type(obj)))\n\u001b[1;32m--> 289\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    290\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    291\u001b[0m             \u001b[1;31m# consolidate\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: cannot concatenate object of type \"<class 'numpy.ndarray'>\"; only pd.Series, pd.DataFrame, and pd.Panel (deprecated) objs are valid"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Riki</th>\n",
+       "      <th>Razor</th>\n",
+       "      <th>Morphling</th>\n",
+       "      <th>Brewmaster</th>\n",
+       "      <th>Slardar</th>\n",
+       "      <th>Wisp</th>\n",
+       "      <th>Omniknight</th>\n",
+       "      <th>Slark</th>\n",
+       "      <th>Ogre Magi</th>\n",
+       "      <th>Chaos Knight</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Carry</th>\n",
+       "      <th>Support</th>\n",
+       "      <th>Offlane</th>\n",
+       "      <th>Mid</th>\n",
+       "      <th>Roamer</th>\n",
+       "      <th>Nuke/Disable</th>\n",
+       "      <th>Highest_Win_Rate</th>\n",
+       "      <th>Most_Picked_719</th>\n",
+       "      <th>Most_Picked_720</th>\n",
+       "      <th>Won</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>29995</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29996</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29997</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29998</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29999</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 113 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Riki  Razor  Morphling  Brewmaster  Slardar  Wisp  Omniknight  Slark  \\\n",
+       "29995   0.0    0.0        1.0         0.0      0.0   0.0         0.0    0.0   \n",
+       "29996   0.0    0.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
+       "29997   0.0    0.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
+       "29998   0.0    0.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
+       "29999   0.0    0.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
+       "\n",
+       "       Ogre Magi  Chaos Knight  ...  Carry  Support  Offlane  Mid  Roamer  \\\n",
+       "29995        0.0           0.0  ...      2        1        1    1       2   \n",
+       "29996        0.0           0.0  ...      1        1        1    2       3   \n",
+       "29997        0.0           0.0  ...      1        3        0    2       0   \n",
+       "29998        0.0           0.0  ...      1        2        2    1       1   \n",
+       "29999        0.0           0.0  ...      2        1        0    2       1   \n",
+       "\n",
+       "       Nuke/Disable  Highest_Win_Rate  Most_Picked_719  Most_Picked_720  Won  \n",
+       "29995             1                 0                0                0    0  \n",
+       "29996             1                 0                2                0    0  \n",
+       "29997             2                 0                0                0    0  \n",
+       "29998             2                 0                0                0    0  \n",
+       "29999             1                 0                0                0    0  \n",
+       "\n",
+       "[5 rows x 113 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "features_df = pd.concat([dummies_df, melee_df, str_df, agi_df, int_df, \n",
+    "cleaned_df = pd.concat([dummies_df, melee_df, str_df, agi_df, int_df, \n",
     "                         op_tiers12_df, op_tiers3_df, carry_df, support_df, \n",
     "                         offlane_df, mid_df, roam_df, nuke_disable_df, \n",
     "                         top_wins_df, picked_719_df, picked_720_df, \n",
     "                         lineups['Won']], axis=1)\n",
     "\n",
-    "# export_csv = features_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', \n",
+    "# export_csv = cleaned_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', \n",
     "#                                  index = None, header=True)\n",
-    "features_df.tail()"
+    "cleaned_df.tail()"
    ]
   },
   {
@@ -755,13 +964,6 @@
     "losers_df = cleaned_df.loc[cleaned_df.Won == 0]\n",
     "losers_df.reset_index(drop=True, inplace=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -785,29 +987,6 @@
    "outputs": [],
    "source": [
     "# find acc/recall - TPR for betting purposes "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# see which hereos won the most\n",
-    "sum_wins = pd.DataFrame(dummies_df.sum(), columns=[\"Won\"])\n",
-    "sum_wins.sort_values(by=['Won'], ascending=False, inplace=True)\n",
-    "\n",
-    "sum_wins = sum_wins[['Won']].apply(lambda x: x / 15000 * 100)\n",
-    "sum_wins.reset_index(inplace=True)\n",
-    "sum_wins.rename(columns={'index':'Hero'}, inplace=True)\n",
-    "top10_winners = sum_wins.head(10)\n",
-    "\n",
-    "\n",
-    "plt.figure(figsize=(12,8))\n",
-    "sns.catplot(kind='bar', data=top10_winners, x='Hero', y='Won')\n",
-    "plt.title('Heroes Win Rates')\n",
-    "plt.ylabel('Win (%)')\n",
-    "plt.xticks(rotation=45, ha='right')"
    ]
   },
   {
