fixed main attriubte feature

--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -134,34 +134,85 @@
        "      <td>Timbersaw</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>Sand King</td>\n",
+       "      <td>Shadow Shaman</td>\n",
+       "      <td>Silencer</td>\n",
+       "      <td>Gyrocopter</td>\n",
+       "      <td>Meepo</td>\n",
+       "      <td>Nyx Assassin</td>\n",
+       "      <td>Slark</td>\n",
+       "      <td>Mirana</td>\n",
+       "      <td>Rubick</td>\n",
+       "      <td>Queen of Pain</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>Morphling</td>\n",
+       "      <td>Omniknight</td>\n",
+       "      <td>Pudge</td>\n",
+       "      <td>Crystal Maiden</td>\n",
+       "      <td>Razor</td>\n",
+       "      <td>Troll Warlord</td>\n",
+       "      <td>Tidehunter</td>\n",
+       "      <td>Lina</td>\n",
+       "      <td>Dark Seer</td>\n",
+       "      <td>Gyrocopter</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>Brewmaster</td>\n",
+       "      <td>Leshrac</td>\n",
+       "      <td>Ogre Magi</td>\n",
+       "      <td>Kunkka</td>\n",
+       "      <td>Riki</td>\n",
+       "      <td>Disruptor</td>\n",
+       "      <td>Juggernaut</td>\n",
+       "      <td>Tiny</td>\n",
+       "      <td>Enigma</td>\n",
+       "      <td>Bounty Hunter</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Sentinal_1         Sentinal_2        Sentinal_3     Sentinal_4  \\\n",
-       "0       Sven         Lone Druid        Venomancer      Clockwerk   \n",
-       "1       Riki             Tinker              Puck        Leshrac   \n",
-       "2    Invoker             Mirana             Pudge         Magnus   \n",
-       "3       Riki  Centaur Warrunner  Treant Protector  Queen of Pain   \n",
-       "4      Razor             Kunkka       Drow Ranger        Leshrac   \n",
+       "   Sentinal_1         Sentinal_2        Sentinal_3      Sentinal_4  \\\n",
+       "0        Sven         Lone Druid        Venomancer       Clockwerk   \n",
+       "1        Riki             Tinker              Puck         Leshrac   \n",
+       "2     Invoker             Mirana             Pudge          Magnus   \n",
+       "3        Riki  Centaur Warrunner  Treant Protector   Queen of Pain   \n",
+       "4       Razor             Kunkka       Drow Ranger         Leshrac   \n",
+       "5   Sand King      Shadow Shaman          Silencer      Gyrocopter   \n",
+       "6   Morphling         Omniknight             Pudge  Crystal Maiden   \n",
+       "7  Brewmaster            Leshrac         Ogre Magi          Kunkka   \n",
        "\n",
-       "            Sentinal_5 Scourge_1   Scourge_2      Scourge_3      Scourge_4  \\\n",
-       "0        Shadow Shaman   Invoker  Gyrocopter      Anti-Mage      Alchemist   \n",
-       "1         Nyx Assassin   Slardar   Sand King        Spectre      Necrolyte   \n",
-       "2  Keeper of the Light    Rubick  Tidehunter  Queen of Pain  Faceless Void   \n",
-       "3          Broodmother    Rubick      Weaver  Troll Warlord      Alchemist   \n",
-       "4                 Zeus      Riki        Bane         Visage        Invoker   \n",
+       "            Sentinal_5      Scourge_1   Scourge_2      Scourge_3  \\\n",
+       "0        Shadow Shaman        Invoker  Gyrocopter      Anti-Mage   \n",
+       "1         Nyx Assassin        Slardar   Sand King        Spectre   \n",
+       "2  Keeper of the Light         Rubick  Tidehunter  Queen of Pain   \n",
+       "3          Broodmother         Rubick      Weaver  Troll Warlord   \n",
+       "4                 Zeus           Riki        Bane         Visage   \n",
+       "5                Meepo   Nyx Assassin       Slark         Mirana   \n",
+       "6                Razor  Troll Warlord  Tidehunter           Lina   \n",
+       "7                 Riki      Disruptor  Juggernaut           Tiny   \n",
        "\n",
-       "     Scourge_5  Won  \n",
-       "0        Slark    2  \n",
-       "1      Warlock    1  \n",
-       "2       Sniper    2  \n",
-       "3  Drow Ranger    1  \n",
-       "4    Timbersaw    1  "
+       "       Scourge_4      Scourge_5  Won  \n",
+       "0      Alchemist          Slark    2  \n",
+       "1      Necrolyte        Warlock    1  \n",
+       "2  Faceless Void         Sniper    2  \n",
+       "3      Alchemist    Drow Ranger    1  \n",
+       "4        Invoker      Timbersaw    1  \n",
+       "5         Rubick  Queen of Pain    2  \n",
+       "6      Dark Seer     Gyrocopter    1  \n",
+       "7         Enigma  Bounty Hunter    1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +222,7 @@
     "                                                                \"Sentinal_3\", \"Sentinal_4\", \"Sentinal_5\",\n",
     "                                                                \"Scourge_1\", \"Scourge_2\", \"Scourge_3\", \n",
     "                                                                \"Scourge_4\", \"Scourge_5\", \"Won\"])\n",
-    "df.head()"
+    "df.head(8)"
    ]
   },
   {
@@ -208,18 +259,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\Programs\\Anaconda\\lib\\site-packages\\pandas\\core\\frame.py:4223: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  return super().rename(**kwargs)\n",
       "D:\\Programs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -231,7 +277,7 @@
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "D:\\Programs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:25: SettingWithCopyWarning: \n",
+      "D:\\Programs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:24: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -333,7 +379,7 @@
        "4          Riki    1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,15 +400,14 @@
     "                               'Scourge_5': \"Hero_5\"}, inplace=True)\n",
     "\n",
     "# create a new df for the losing teams\n",
-    "sentinal_df2 = df[['Sentinal_1','Sentinal_2','Sentinal_3','Sentinal_4','Sentinal_5','Won']]\n",
+    "\n",
     "sentinal_losers = sentinal_df2[df.Won == 2]\n",
     "sentinal_losers['Won'] = 0\n",
     "sentinal_losers.rename(columns={'Sentinal_1': \"Hero_1\", 'Sentinal_2': \"Hero_2\", \n",
     "                               'Sentinal_3': \"Hero_3\", 'Sentinal_4': \"Hero_4\",\n",
     "                               'Sentinal_5': \"Hero_5\"}, inplace=True)\n",
     "\n",
-    "scourge_df2 = df[['Scourge_1','Scourge_2','Scourge_3','Scourge_4','Scourge_5','Won']]\n",
-    "scourge_losers = scourge_df2[df.Won == 1]\n",
+    "scourge_losers = scourge_df[df.Won == 1]\n",
     "scourge_losers['Won'] = 0\n",
     "scourge_losers.rename(columns={'Scourge_1': \"Hero_1\", 'Scourge_2': \"Hero_2\", \n",
     "                               'Scourge_3': \"Hero_3\", 'Scourge_4': \"Hero_4\",\n",
@@ -370,14 +415,14 @@
     "\n",
     "\n",
     "# merge the dataframes to create a df that contains all the lineups and if they won or not\n",
-    "lineups = pd.concat([sentinal_winners, scourge_winners, sentinal_losers, scourge_losers])\n",
+    "# lineups = pd.concat([sentinal_winners, scourge_winners, sentinal_losers, scourge_losers])\n",
     "lineups.reset_index(drop=True, inplace=True)\n",
     "lineups.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,13 +448,13 @@
     "\n",
     "dummies_df = populate_df(features_df)\n",
     "no_features_df = pd.concat([dummies_df, lineups.Won], axis=1)\n",
-    "dummies_csv = no_features_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_dummies.csv', \n",
-    "                                 index = None, header=True)"
+    "# dummies_csv = no_features_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_dummies.csv', \n",
+    "#                                  index = None, header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,19 +475,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Ancient Apparition',\n",
+       " 'Bane',\n",
+       " 'Batrider',\n",
+       " 'Chen',\n",
+       " 'Crystal Maiden',\n",
+       " 'Dark Seer',\n",
+       " 'Dark Willow',\n",
+       " 'Dazzle',\n",
+       " 'Death Prophet',\n",
+       " 'Disruptor',\n",
+       " 'Enchantress',\n",
+       " 'Enigma',\n",
+       " 'Grimstroke',\n",
+       " 'Invoker',\n",
+       " 'Jakiro',\n",
+       " 'Keeper of the Light',\n",
+       " 'Leshrac',\n",
+       " 'Lich',\n",
+       " 'Lina',\n",
+       " 'Lion',\n",
+       " 'Nature%27s Prophet',\n",
+       " 'Necrophos',\n",
+       " 'Ogre Magi',\n",
+       " 'Oracle',\n",
+       " 'Outworld Devourer',\n",
+       " 'Puck',\n",
+       " 'Pugna',\n",
+       " 'Queen of Pain',\n",
+       " 'Rubick',\n",
+       " 'Shadow Demon',\n",
+       " 'Shadow Shaman',\n",
+       " 'Silencer',\n",
+       " 'Skywrath Mage',\n",
+       " 'Storm Spirit',\n",
+       " 'Techies',\n",
+       " 'Tinker',\n",
+       " 'Visage',\n",
+       " 'Warlock',\n",
+       " 'Windranger',\n",
+       " 'Winter Wyvern',\n",
+       " 'Witch Doctor',\n",
+       " 'Zeus']"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Sort characters based on their main attribute (Strength, Agility, Intellegence)\n",
-    "str_heros = character_by_attributes('Strength')\n",
-    "agi_heros = character_by_attributes('Agility')\n",
-    "int_heros = character_by_attributes('Intelligence')"
+    "str_heroes = character_by_attributes('Strength')\n",
+    "agi_heroes = character_by_attributes('Agility')\n",
+    "int_heroes = character_by_attributes('Intelligence')\n",
+    "agi_heroes = [x.replace('_', ' ') for x in agi_heroes]\n",
+    "int_heroes = [x.replace('_', ' ') for x in int_heroes]\n",
+    "int_heroes = [x.replace('%27, \"''\") for x in int_heroes]\n",
+    "int_heroes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,14 +567,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Intelligence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Intelligence\n",
+       "0             3\n",
+       "1             0\n",
+       "2             2\n",
+       "3             0\n",
+       "4             1"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create a new feature: how many inteligence heros\n",
     "int_df = features_df.where(~features_df.isin(int_heros), None)\n",
     "int_df = pd.DataFrame(int_df.isnull().sum(axis=1), columns=['Intelligence'])\n",
-    "# int_df.head()"
+    "int_df.head()"
    ]
   },
   {
@@ -740,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -1102,17 +1266,17 @@
        "[30000 rows x 113 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cleaned_df = pd.concat([dummies_df, melee_df, str_df, agi_df, int_df, \n",
-    "                         op_tiers12_df, op_tiers3_df, carry_df, support_df, \n",
-    "                         offlane_df, mid_df, roam_df, nuke_disable_df, \n",
-    "                         top_wins_df, picked_719_df, picked_720_df, \n",
-    "                         lineups['Won']], axis=1)\n",
+    "# cleaned_df = pd.concat([dummies_df, melee_df, str_df, agi_df, int_df, \n",
+    "#                          op_tiers12_df, op_tiers3_df, carry_df, support_df, \n",
+    "#                          offlane_df, mid_df, roam_df, nuke_disable_df, \n",
+    "#                          top_wins_df, picked_719_df, picked_720_df, \n",
+    "#                          lineups['Won']], axis=1)\n",
     "\n",
     "export_csv = cleaned_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', \n",
     "                                 index = None, header=True)\n",
@@ -1257,7 +1421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
