--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "7         Enigma  Bounty Hunter    1  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,13 +259,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "D:\\Programs\\Anaconda\\lib\\site-packages\\pandas\\core\\frame.py:4223: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  return super().rename(**kwargs)\n",
       "D:\\Programs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -379,7 +384,7 @@
        "4          Riki    1  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,61 +480,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Ancient Apparition',\n",
-       " 'Bane',\n",
-       " 'Batrider',\n",
-       " 'Chen',\n",
-       " 'Crystal Maiden',\n",
-       " 'Dark Seer',\n",
-       " 'Dark Willow',\n",
-       " 'Dazzle',\n",
-       " 'Death Prophet',\n",
-       " 'Disruptor',\n",
-       " 'Enchantress',\n",
-       " 'Enigma',\n",
-       " 'Grimstroke',\n",
-       " 'Invoker',\n",
-       " 'Jakiro',\n",
-       " 'Keeper of the Light',\n",
-       " 'Leshrac',\n",
-       " 'Lich',\n",
-       " 'Lina',\n",
-       " 'Lion',\n",
-       " 'Nature%27s Prophet',\n",
-       " 'Necrophos',\n",
-       " 'Ogre Magi',\n",
-       " 'Oracle',\n",
-       " 'Outworld Devourer',\n",
-       " 'Puck',\n",
-       " 'Pugna',\n",
-       " 'Queen of Pain',\n",
-       " 'Rubick',\n",
-       " 'Shadow Demon',\n",
-       " 'Shadow Shaman',\n",
-       " 'Silencer',\n",
-       " 'Skywrath Mage',\n",
-       " 'Storm Spirit',\n",
-       " 'Techies',\n",
-       " 'Tinker',\n",
-       " 'Visage',\n",
-       " 'Warlock',\n",
-       " 'Windranger',\n",
-       " 'Winter Wyvern',\n",
-       " 'Witch Doctor',\n",
-       " 'Zeus']"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Sort characters based on their main attribute (Strength, Agility, Intellegence)\n",
     "str_heroes = character_by_attributes('Strength')\n",
@@ -537,13 +490,12 @@
     "int_heroes = character_by_attributes('Intelligence')\n",
     "agi_heroes = [x.replace('_', ' ') for x in agi_heroes]\n",
     "int_heroes = [x.replace('_', ' ') for x in int_heroes]\n",
-    "int_heroes = [x.replace('%27, \"''\") for x in int_heroes]\n",
-    "int_heroes"
+    "int_heroes = [x.replace('%27', \"'\") for x in int_heroes]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +580,7 @@
        "4             1"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "metadata": {
     "scrolled": true
    },
@@ -1266,17 +1218,17 @@
        "[30000 rows x 113 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# cleaned_df = pd.concat([dummies_df, melee_df, str_df, agi_df, int_df, \n",
-    "#                          op_tiers12_df, op_tiers3_df, carry_df, support_df, \n",
-    "#                          offlane_df, mid_df, roam_df, nuke_disable_df, \n",
-    "#                          top_wins_df, picked_719_df, picked_720_df, \n",
-    "#                          lineups['Won']], axis=1)\n",
+    "cleaned_df = pd.concat([dummies_df, melee_df, str_df, agi_df, int_df, \n",
+    "                         op_tiers12_df, op_tiers3_df, carry_df, support_df, \n",
+    "                         offlane_df, mid_df, roam_df, nuke_disable_df, \n",
+    "                         top_wins_df, picked_719_df, picked_720_df, \n",
+    "                         lineups['Won']], axis=1)\n",
     "\n",
     "export_csv = cleaned_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', \n",
     "                                 index = None, header=True)\n",
