--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "7         Enigma  Bounty Hunter    1  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,18 +259,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\Programs\\Anaconda\\lib\\site-packages\\pandas\\core\\frame.py:4223: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  return super().rename(**kwargs)\n",
       "D:\\Programs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -384,7 +379,7 @@
        "4          Riki    1  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +401,7 @@
     "\n",
     "# create a new df for the losing teams\n",
     "\n",
-    "sentinal_losers = sentinal_df2[df.Won == 2]\n",
+    "sentinal_losers = sentinal_df[df.Won == 2]\n",
     "sentinal_losers['Won'] = 0\n",
     "sentinal_losers.rename(columns={'Sentinal_1': \"Hero_1\", 'Sentinal_2': \"Hero_2\", \n",
     "                               'Sentinal_3': \"Hero_3\", 'Sentinal_4': \"Hero_4\",\n",
@@ -420,14 +415,14 @@
     "\n",
     "\n",
     "# merge the dataframes to create a df that contains all the lineups and if they won or not\n",
-    "# lineups = pd.concat([sentinal_winners, scourge_winners, sentinal_losers, scourge_losers])\n",
+    "lineups = pd.concat([sentinal_winners, scourge_winners, sentinal_losers, scourge_losers])\n",
     "lineups.reset_index(drop=True, inplace=True)\n",
     "lineups.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,31 +490,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create a new feature: how many strength heros\n",
-    "str_df = features_df.where(~features_df.isin(str_heros), None)\n",
+    "str_df = features_df.where(~features_df.isin(str_heroes), None)\n",
     "str_df = pd.DataFrame(str_df.isnull().sum(axis=1), columns=['Strength'])\n",
     "# str_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create a new feature: how many agility heros\n",
-    "agi_df = features_df.where(~features_df.isin(agi_heros), None)\n",
+    "agi_df = features_df.where(~features_df.isin(agi_heroes), None)\n",
     "agi_df = pd.DataFrame(agi_df.isnull().sum(axis=1), columns=['Agility'])\n",
     "# agi_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +548,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -561,11 +556,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -574,27 +569,27 @@
       "text/plain": [
        "   Intelligence\n",
        "0             3\n",
-       "1             0\n",
+       "1             1\n",
        "2             2\n",
-       "3             0\n",
-       "4             1"
+       "3             1\n",
+       "4             2"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# create a new feature: how many inteligence heros\n",
-    "int_df = features_df.where(~features_df.isin(int_heros), None)\n",
+    "int_df = features_df.where(~features_df.isin(int_heroes), None)\n",
     "int_df = pd.DataFrame(int_df.isnull().sum(axis=1), columns=['Intelligence'])\n",
     "int_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,9 +1225,21 @@
     "                         top_wins_df, picked_719_df, picked_720_df, \n",
     "                         lineups['Won']], axis=1)\n",
     "\n",
-    "export_csv = cleaned_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', \n",
-    "                                 index = None, header=True)\n",
-    "cleaned_df"
+    "# export_csv = cleaned_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', \n",
+    "#                                  index = None, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = pd.concat([dummies_df, melee_df, str_df, agi_df, int_df, \n",
+    "                     carry_df, support_df, offlane_df, mid_df, roam_df, \n",
+    "                     nuke_disable_df, top_wins_df, lineups['Won']], axis=1)\n",
+    "export_csv = cleaned_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_t.csv', \n",
+    "                                 index = None, header=True)"
    ]
   },
   {
