--- a/dota_classification_models.ipynb
+++ b/dota_classification_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,15 +74,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Programs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:5: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  \"\"\"\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recall Score: 53.2\n",
-      "Accuracy Score: 51.91\n"
+      "Recall Score: 51.03\n",
+      "Accuracy Score: 50.96\n"
      ]
     }
    ],
@@ -93,9 +101,9 @@
     "knn = KNeighborsClassifier()\n",
     "knn.fit(x_train, y_train.values.ravel())\n",
     "\n",
-    "test_predict = knn.predict(x_test)\n",
+    "knn_pred = knn.predict(x_test)\n",
     "\n",
-    "recall, acc = print_metrics(y_test, test_predict, print_score=True)"
+    "recall, acc = print_metrics(y_test, knn_pred, print_score=True)"
    ]
   },
   {
@@ -128,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,12 +174,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████████| 4/4 [02:42<00:00, 40.67s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scores: [(54.63, 52.08), (43.41, 52.38), (54.38, 51.88), (44.0, 52.18)], k: 10\n"
+     ]
+    }
+   ],
    "source": [
     "# run model again k = 8, 9, 10, 11, 12\n",
-    "acc, k, scores = multiple_knn(df, labels, ks=[8, 9, 10, 11, 12, 14])\n",
+    "acc, k, scores = multiple_knn(df, labels, ks=[9, 10, 11, 12])\n",
     "print(f\"scores: {scores}, k: {k}\")"
    ]
   },
@@ -236,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,20 +268,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Programs\\Anaconda\\lib\\site-packages\\sklearn\\ensemble\\forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall Score: 41.58\n",
+      "Accuracy Score: 53.09\n"
+     ]
+    }
+   ],
    "source": [
     "# get a baseline how random forest performs\n",
     "forest = RandomForestClassifier()\n",
-    "forest.fit(x_train, y_train)\n",
+    "forest.fit(x_train, y_train.values.ravel())\n",
     "\n",
     "# predcit accuracy\n",
     "forest_test_pred = forest.predict(x_test)\n",
     "\n",
     "# testing accuracy\n",
-    "f_recall, f_acc = print_metrics(y_test, forest_test_pred, print_score=True)\n",
-    "plot_confusion_matrix(y_test, forest_test_pred, classes=['Won', 'Lost'], title='Won or Lost')"
+    "f_recall, f_acc = print_metrics(y_test, forest_test_pred, print_score=True)"
    ]
   },
   {
@@ -270,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,11 +323,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 128 candidates, totalling 384 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 384 out of 384 | elapsed:   39.8s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall Score: 51.6\n",
+      "Accuracy Score: 55.95\n",
+      "Best paramaters: {'criterion': 'entropy', 'max_depth': 4, 'min_samples_leaf': 4, 'min_samples_split': 5}\n"
+     ]
+    }
+   ],
    "source": [
     "# Use grid search to find the best paramers for random forest\n",
     "forest_search = GridSearchCV(forest, forest_param_grid, cv=3, verbose=1, scoring='accuracy')\n",
