hopefully eda done

--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -1013,6 +1013,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# evaluate how the winning teams were set up\n",
+    "winners_df = cleaned_df.loc[cleaned_df.Won == 1]\n",
     "for column in winners_df.columns:\n",
     "    if column not in dummies_df.columns and column != 'Won':\n",
     "        create_hist(winners_df, column=column)\n"
