added a different csv

--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -1034,7 +1034,7 @@
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Lost</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>29996</td>\n",
@@ -1058,7 +1058,7 @@
        "      <td>0</td>\n",
        "      <td>0.4</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Lost</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>29997</td>\n",
@@ -1082,7 +1082,7 @@
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Lost</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>29998</td>\n",
@@ -1106,7 +1106,7 @@
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Lost</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>29999</td>\n",
@@ -1130,7 +1130,7 @@
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Lost</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1152,30 +1152,30 @@
        "29998        0.0           0.0  ...    0.2      0.4      0.4  0.2     0.2   \n",
        "29999        0.0           0.0  ...    0.4      0.2      0.0  0.4     0.2   \n",
        "\n",
-       "       Nuke/Disable  Winners  Most_Picked_719  Most_Picked_720   Won  \n",
-       "29995           0.2        0              0.0              0.0  Lost  \n",
-       "29996           0.2        0              0.4              0.0  Lost  \n",
-       "29997           0.4        0              0.0              0.0  Lost  \n",
-       "29998           0.4        0              0.0              0.0  Lost  \n",
-       "29999           0.2        0              0.0              0.0  Lost  \n",
+       "       Nuke/Disable  Winners  Most_Picked_719  Most_Picked_720  Won  \n",
+       "29995           0.2        0              0.0              0.0    0  \n",
+       "29996           0.2        0              0.4              0.0    0  \n",
+       "29997           0.4        0              0.0              0.0    0  \n",
+       "29998           0.4        0              0.0              0.0    0  \n",
+       "29999           0.2        0              0.0              0.0    0  \n",
        "\n",
        "[5 rows x 113 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# concatanate all the features together\n",
     "cleaned_df = pd.concat([dummies_df, melee_df, str_df, agi_df, int_df, \n",
     "                         op_tiers12_df, op_tiers3_df, carry_df, support_df, \n",
     "                         offlane_df, mid_df, roam_df, nuke_disable_df, \n",
     "                         top_wins_df, picked_719_df, picked_720_df, \n",
     "                         lineups['Won']], axis=1)\n",
     "\n",
-    "# cleaned_df.loc[cleaned_df.Won == 1, 'Won'] = 'Won'\n",
-    "# cleaned_df.loc[cleaned_df.Won == 0, 'Won'] = 'Lost'\n",
+    "# save the new dataframe as a csv file\n",
     "export_csv = cleaned_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', \n",
     "                                 index = None, header=True)\n",
     "\n",
